--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>net.itransformers</groupId>
     <artifactId>ciscocli4groovy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <description>This library is an implementation of DSL Expect for Groovy language</description>
     <organization>
@@ -26,7 +26,8 @@
         <connection>scm:git:ssh://git@github.com/iTransformers/ciscocli4groovy.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/iTransformers/ciscocli4groovy.git</developerConnection>
         <url>https://github.com/iTransformers/ciscocli4groovy.git</url>
-    </scm>
+      <tag>ciscocli4groovy-1.0</tag>
+  </scm>
 
     <developers>
         <developer>
